--- a/package.json
+++ b/package.json
@@ -15,11 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/zurb/foundation-sites-template.git"
-  },
-  "bugs": {
-    "url": "https://github.com/zurb/foundation-sites/issues",
-    "email": "foundation@zurb.com"
+    "url": "https://github.com/lancebiu/CV.git"
   },
   "author": "Huixiang Luo",
   "license": "MIT",
